<resources>
    <string name="app_name">Womba</string>
    <string name="errorInternet">Internet connection not Available</string>
    <string name="something_went_wrong">Something went wrong!. Try after some time</string>
    <string name="enable_permission">Enable Permissions from settings</string>
    <string name="work_in_progres">"Work in Progress"</string>
    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>
    <string name="upcoming_appointments">Upcoming</string>
    <string name="intro_message_first">You\'re just a click away from your doctor. All you have to do is select the doctor you want and schedule your appointment.</string>
    <string name="knowing_better">Knowing Better</string>
    <string name="title_third">Feels Like Home</string>
    <string name="intro_message_third">You can connect with a doctor via video call or chat from anywhere.</string>
    <string name="intro_message_second">Share your medical history and symptoms with your doctor from the convenience of your own home.</string>
    <string name="forgot_your">Forgot your</string>
    <string name="i_don_t_have_account_register_here">I don\'t have account. <u>Register here</u></string>
    <string name="let_me_into_an_account_sign_in">Let me into an Account. <u>Sign in</u></string>
    <string name="enable">Enable</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="password_"><u>Password</u></string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="btn_login">Sign in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_forgot_password">Forgot Password</string>
    <string name="EmailErrorMessage">Please enter email</string>
    <string name="PasswordErrorMessage">Please enter password</string>
    <string name="invalid_email">Please enter valid email address</string>
    <string name="missing_email">Email is missing</string>
    <string name="missing_password">Password is missing</string>
    <string name="missing_phone">Phone number is missing</string>
    <string name="missing_confirm_password">Confirm Password is missing</string>
    <string name="not_equal_confirm_password">Confirm Password doesnot match with Password</string>
    <string name="invalid_email_password">Entered email or password are not in correct format</string>
    <string name="incorrect_email_password">Either email or password is incorrect</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="you_will_receive_password_on_your_email">You will receive password on your email</string>
    <string name="home">Home</string>
    <string name="appointments">Appointments</string>
    <string name="payments">Payments</string>
    <string name="profile">Profile</string>
    <string name="video">Video</string>
    <string name="name">Name</string>
    <string name="bpm">BPM</string>
    <string name="rpm">RPM</string>
    <string name="breath">Breath</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="respiration">Respiration</string>
    <string name="oxygen_saturation">Oxygen Saturation</string>
    <string name="stress">Stress</string>
    <string name="registerScreenTitle">Register</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="nameHint">Full Name</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="register">Register</string>
    <string name="mobile">Mobile Number</string>
    <string name="firstnameEmpty">Please enter First Name</string>
    <string name="lastnameEmpty">Please enter Last Name</string>
    <string name="validfirstname">Please provide valid first name</string>
    <string name="validlastname">Please provide valid last name</string>
    <string name="mobileEmpty">Please enter mobile number</string>
    <string name="validmobileNumber">Please enter valid mobile number</string>
    <string name="address">Please enter your Address</string>
    <string name="gender">Please select your Gender</string>
    <string name="country">Please select your Country</string>
    <string name="state">Please select your State</string>
    <string name="city">Please select your City</string>
    <string name="dob">Please choose your Date of Birth</string>
    <string name="ethnicity">Please select your Ethnicity</string>
    <string name="height">Please enter your Height(in meters)</string>
    <string name="weight">Please enter your Weight(in Kgs)</string>
    <string name="bmi">Please enter your BMI</string>
    <string name="blood_group">Please enter your Blood Group</string>
    <string name="zipcode">Please enter valid 6 digit Pincode</string>
    <string name="hrv_sdnn">HRV-SDNN</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="results">Result</string>
    <string name="heart_rate_bpm">Heart Rate (BPM)</string>
    <string name="low_high">72 Low - 106 High</string>
    <string name="please_wait">Please wait..</string>
    <string name="oxygen_saturation_sp">Oxygen Saturation\n(Sp02%)</string>
    <string name="blood_pressure_mmhg">Blood Pressure\n(mmHg)</string>
    <string name="full_report">Full Report</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="low">Low</string>
    <string name="normal">Normal</string>
    <string name="mild">Mild</string>
    <string name="high">High</string>
    <string name="extremely_high">Extremely High</string>
    <string name="phone_number">Phone Number</string>
    <string name="vital_face_scan">Vital Face Scan</string>
    <string name="search">Search</string>
    <string name="doctor_profile">Doctor Profile</string>
    <string name="general_information">General Information</string>
    <string name="education">Education</string>
    <string name="speciality">Speciality</string>
    <string name="no_available_are_doctors">No Available are Doctors!!</string>
    <string name="no_upcoming_appointments">No Upcoming Appointments</string>
    <string name="doctors">Doctors</string>
    <string name="password__"><u>Password?</u></string>
    <string name="healthProfiletitle">Health Profile</string>
    <string name="healthProfile_title1"><![CDATA[Conditions & Symptoms]]></string>
    <string name="healthProfile_ques1">Do you have any diagnosed Condition or known Symptoms?</string>
    <string name="healthProfile_title2">Medications</string>
    <string name="healthProfile_ques2">Do you take any Medications?</string>
    <string name="healthProfile_title3">Allergies</string>
    <string name="healthProfile_ques3">Do you have any Allergies?</string>
    <string name="healthProfile_title4">Treatments</string>
    <string name="healthProfile_ques4">Have you had any treatments,procedures or surgeries performed?</string>
    <string name="healthProfile_title5">Immunization</string>
    <string name="healthProfile_ques5">Which vaccinations have you received in the past?</string>
    <string name="healthProfile_title6">Add Family History</string>
    <string name="healthProfile_ques6">Do any of your close relatives have significant medical conditions?</string>
    <string name="healthProfile_ques6_2">Do any of your close relatives die before the age of 60 due to a significant medical illness?</string>
    <string name="health_profile">Health Profile</string>
    <string name="lifestyle">LifeStyle</string>
    <string name="past_appointments">Past</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip exea commodo consequat.</string>
    <string name="attach_any_previous_prescription"><u>Attach any previous prescription</u></string>
    <string name="appointment_detail">Appointment Detail</string>
    <string name="no_data_available">No Data Available!!</string>
    <string name="safe_secure_quick_checkout"><![CDATA[Safe & Secure Quick Checkout]]></string>
    <string name="pay_using_credit_card">Pay using credit card</string>
    <string name="dollar_sign">$</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="ok">OK</string>
    <string name="error_card">Please Enter Card Details!</string>
    <string name="please_enter_a_valid_card_number">Please enter a Valid Card Number</string>
    <string name="error_select_time_slot">Select a time slot to continue</string>
    <string name="please_specify_your_reason_for_appointment">Please specify your reason for appointment</string>
    <string name="you_don_t_need_to_do_anything_else_we_will_send_you_a_text_reminder_before_the_appointment">You don\'t need to do anything else!\nWe will send you a text reminder before the appointment</string>
    <string name="intro_fourth">WOMBACARE will allow you to find our your blood pressure, variable heart rate stress and more with a selfie</string>
    <string name="prescription">Prescription</string>
    <string name="password_validation_error">Password must contains a digit, a lower case letter, an upper case letter and a special character</string>
    <string name="heart_info">The number of times a person\'s\nheart beats per minute(BPM).\nGenerally a lower heart rate at\nrest implies more efficient heart\nfunction and better cardiovascular\n fitness. Normal HR level are different\n according to age.</string>
    <string name="hrv_info">Standard deviation of the NN(R-R)\nintervals</string>
    <string name="blood_info">The first(Systolic) is the amount\nof pressure your blood is exerting\nagainst your artery walls when the\nheart beats.The second(Diastolic)\nis for the times when the heart is\nresting between beats.</string>
    <string name="stress_info">Stress Level measurement is based\non Baevsky\'s and US/European\nIndex level measurements(Globally\napproved) and is calculated\n according to Heart Rate Variability\n(HRV) measurements.</string>
    <string name="respiration_info">The number of breaths per minute</string>
    <string name="oxygen_info">The amount of oxygen in your blood</string>
    <string name="age">Age</string>
    <string name="rpm_range">RPM Range</string>
    <string name="_6y_10y">6y-10y</string>
    <string name="_17_23">17-23</string>
    <string name="adults">Adults</string>
    <string name="_12_18">12-18</string>
    <string name="above_65y">Above 65y</string>
    <string name="_12_28">12-28</string>
    <string name="spo2_level">SpO2 level</string>
    <string name="indication">Indication(%)</string>
    <string name="abnormal">Abnormal</string>
    <string name="_95_and_above">95 and above</string>
    <string name="below_95">Below 95</string>
    <string name="very_sad">Very\nSad</string>
    <string name="medication_taken_for_this_condition">Medication taken for this condition</string>
    <string name="last_week">Last Week</string>
    <string name="last_14_days">Last 14 Days</string>
    <string name="last_21_days">Last 21 Days</string>
</resources>